2010-10-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(NETX_SUN_CLASSES): List internal Sun class
	dependencies of NetX.
	(netx): Build normally without setting the
	bootclasspath empty.

2010-10-18  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am:
	Corrected location of patch
	patches/openjdk/6853592-badwindow-warning-fix.patch
	in Makefile.am
	* patches/6703377-freetypescaler.patch:
	Added patch which fixes bug #6703377

2010-10-15  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/openjdk/6853592-badwindow-warning-fix.patch:
	Added patch which fixes bug #6853592 introduced by another patch
	6678385-window_movement_crasher.patch

2010-10-14  Omair Majid  <omajid@redhat.com>

	Fixes PR565
	* NEWS: Update with fix.
	* netx/net/sourceforge/jnlp/Launcher.java:
	Make mainGroup package-private so NetxPanel can access it.
	(createThreadGroup): Only create a new AppThreadGroup if not a plugin.
	(run): Update comments and make dependence on SunToolkit explicit.
	* netx/net/sourceforge/jnlp/NetxPanel.java
	(run): New method. Create a new AppContext for the applet.
	(createAppletThread): Create a new AppThreadGroup and start the applet
	thread in that ThreadGroup.
	* netx/net/sourceforge/jnlp/runtime/ApplicationInstance.java:
	Add new private variable appContext.
	(ApplicationInstance): Initialize appContext.
	(getAppContext): New method.
	* netx/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java:
	Extend AWTSecurityManager.
	(JNLPSecurityManager): Save the AppContext.
	(getAppContext): New method. Traverse the stack to find the application
	and return its AppContext.

2010-10-14  Matthias Klose  <doko@ubuntu.com>

	* configure.ac: New option --with-llvm-config.
	* INSTALL: Document it.

2010-10-13  Andrew John Hughes  <ahughes@redhat.com>

	* NEWS:
	Add 1.7.5, 1.8.2 and 1.9.1 releases.

2010-10-12  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (stamps/add-plugin.stamp, stamps/add-plugin-debug.stamp,